# ppopp19

./: README.md
ds_bench/: README.md  createRelease.sh
ds_bench/code/: CMakeLists.txt
ds_bench/code/cmake/: add_tbb.cmake  add_unit_test.cmake  environment.cmake
ds_bench/code/include/: benchmark_utils.h  eval.h  tree_set_utils.h
ds_bench/code/include/google/: btree.h  btree_container.h
ds_bench/code/include/souffle/: CompiledRamTuple.h  ParallelUtils.h  Trie.h  Util.h
ds_bench/code/include/souffle/fine_grained/: BTree.h
ds_bench/code/include/souffle/optimistic/: BTree.h  BTree.h_simple_seq_lock
ds_bench/code/include/souffle/read_write/: BTree.h
ds_bench/code/include/souffle/sequential/: BTree.h
ds_bench/code/src/: benchmark_utils.cpp  insert_benchmark.cxx  membership_benchmark.cxx  memory_usage_benchmark.cxx  parallel_insert_benchmark.cxx  parallel_insert_thread_private_benchmark.cxx  scan_benchmark.cxx
ds_bench/code/test/: empty.cc  tbb_test.cc  tree_test.cc  trie_test.cc
souffle_doop/: .gitignore  1-object-sensitive+heap.dl  README.md  run.sh
souffle_doop/data/: .gitignore
souffle_doop/souffle/: configure.ac
souffle_doop/souffle-google-btree/: configure.ac
souffle_doop/souffle-google-btree/debian/: control
souffle_doop/souffle-google-btree/src/: AstArgument.cpp  AstArgument.h  AstComponent.h  AstComponentChecker.h  AstNode.h  AstProgram.cpp  AstProgram.h  AstSemanticChecker.cpp  AstSemanticChecker.h  AstTransforms.h  AstTranslator.cpp  AstTranslator.h  AstType.h  AstVisitor.h  CompiledIndexUtils.h  CompiledRelation.h  ComponentModel.h  Constraints.h  ErrorReport.h  ExplainProvenance.h  ExplainTree.h  Global.cpp  Global.h  IndexSetAnalysis.h  Interpreter.cpp  Interpreter.h  InterpreterContext.h  InterpreterRecords.h  IterUtils.h  MagicSet.cpp  MinimiseProgramTransformer.cpp  PrecedenceGraph.cpp  ProfileEvent.h  RamAnalysis.h  RamNode.h  RamOperation.cpp  RamSemanticChecker.h  RamStatement.h  RamTransformer.cpp  ReadStream.h  (+11 more)
souffle_doop/souffle-google-btree/src/profile/: HtmlString.h  OutputProcessor.h  Reader.h  Relation.h  Rule.h  StringUtils.h  Table.h  htmlCssStyle.h  htmlJsChartistPlugin.h
souffle_doop/souffle-google-btree/src/test/: ast_program_test.cpp  (+3 more)
souffle_doop/souffle-google-btree/tests/: Makefile.am  atlocal.in  syntactic.at
souffle_doop/souffle-google-btree/utilities/: CMakeLists.txt
souffle_doop/souffle-intel-hashset/: .clang-tidy  .gitignore  Makefile.am  README.md  configure.ac
souffle_doop/souffle-intel-hashset/lib/: arena.d  concurrent_hash_map.d  concurrent_vector_v2.d  condition_variable.d  critical_section.d  frontend.d  governor.d  libtbb.so.2  libtbbmalloc.so.2  libtbbmalloc_proxy.so.2  market.d  mutex.d  observer_proxy.d  pipeline.d  private_server.d  queuing_mutex.d  queuing_rw_mutex.d  reader_writer_lock.d  scheduler.d  task.d  task_group_context.d  task_v2.d  tbb.def  tbb_main.d  tbb_thread.d  tbbmalloc.d  tbbmalloc.def  tbbmallocproxy.def  tbbvars.csh  tbbvars.sh  version_string.ver
souffle_doop/souffle-intel-hashset/src/: AstClause.cpp  AstParserUtils.cpp  AstPragma.h  AstTransformer.cpp  AstTransformer.h  AstTransforms.cpp  AstUtils.cpp  AstUtils.h  BinaryFunctorOps.h  CompiledOptions.h  CompiledRelation.h  CompiledSouffle.h  ComponentModel.cpp  DebugReport.cpp  DebugReport.h  GraphUtils.h  IOSystem.h  IndexSetAnalysis.cpp  InlineRelationsTransformer.cpp  InterpreterIndex.h  LogStatement.h  Logger.h  Makefile.am  ParserDriver.h  PrecedenceGraph.h  RamCondition.h  RamTransformer.h  RamTranslationUnit.h  RamTypes.h  RamVisitor.h  ReadStreamSQLite.h  SouffleInterface.h  TernaryFunctorOps.h  Trie.h  UnaryFunctorOps.h  UnionFind.h  Util.h  WriteStreamCSV.h  WriteStreamSQLite.h  htmx86.h  (+2 more)
souffle_doop/souffle-intel-hashset/tests/: provenance.at  semantic.at
souffle_doop/souffle/debian/: changelog.in
souffle_doop/souffle/src/: AstAnalysis.h  AstAttribute.h  AstClause.h  AstIODirective.h  AstLiteral.h  AstParserUtils.h  AstPragma.cpp  AstRelation.h  AstSemanticChecker.cpp  AstTransforms.cpp  AstTranslationUnit.h  AstTranslator.cpp  AstTypeAnalysis.cpp  AstTypeAnalysis.h  AstVisitor.h  BTree.h  BinaryRelation.h  BlockList.h  CompiledRecord.h  CompiledRelation.h  EventProcessor.h  Explain.h  ExplainProvenanceSLD.h  InterpreterInterface.h  InterpreterRecords.cpp  InterpreterRelation.h  MinimiseProgramTransformer.cpp  Mpi.h  ParallelUtils.h  ParserDriver.cpp  PrecedenceGraph.cpp  ProfileDatabase.h  ProvenanceTransformer.cpp  RamCondition.h  RamOperation.h  RamProgram.h  RamRelation.h  RamValue.h  StringPool.h  SymbolTable.h  (+5 more)
souffle_doop/souffle/src/profile/: CellInterface.h  Cli.h  Tui.h  UserInputReader.h  htmlCssChartist.h  htmlJsUtil.h  htmlMain.h
souffle_doop/souffle/src/test/: ast_utils_test.cpp  matching_test.cpp  test.h  trie_test.cpp
souffle_doop/souffle/tests/: evaluation.at  example.at  fastevaluation.at  interface.at  testsuite.at
souffle_doop/souffle/tests/evaluation/inline_negation2/: c.csv
souffle_doop/souffle/tests/evaluation/minmaxnum/: absolute_difference.csv  bounded_difference.csv
souffle_doop/souffle/tests/example/flights2/: connection.csv
souffle_doop/souffle/tests/example/input_output/: InputOutputSymbolNumber.csv
souffle_doop/souffle/tests/example/not_match/: outputData.csv
souffle_doop/souffle/tests/example/profile_default/: q.csv
souffle_doop/souffle/tests/provenance/cprog1/: cprog1.in  cprog1.out
souffle_doop/souffle/tests/provenance/negation/: animal.csv
souffle_doop/souffle/tests/provenance/path/: path.out
souffle_doop/souffle/tests/semantic/bool/: e.csv
souffle_doop/souffle/tests/semantic/inline_output/: inline_output.err
souffle_doop/souffle/tests/semantic/progmin1/: A.csv  B.csv
souffle_doop/souffle/tests/semantic/rqualifiers/: rqualifiers.dl
souffle_doop/souffle/tests/semantic/witness_check/: witness_check.err
souffle_doop/souffle/tests/syntactic/hash/: hash.dl
souffle_doop/souffle/tests/syntactic/input/: input.err
souffle_doop/souffle/tests/syntactic/printsize/: printsize.err
souffle_doop/souffle/tests/syntactic/qualifiers/: qualifiers.dl
(+46 files in other folders)
